--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Ignore node_modules
 node_modules/
-.yarn/cache/
-.yarn/unplugged/
-.yarn/build-state.yml
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .yarn/install-state.gz
 .pnp.*
