--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ node_modules/
 !.yarn/versions
 .yarn/install-state.gz
 .pnp.*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
