--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
     "frontend",
     "backend"
   ],
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "devDependencies": {
+    "@playwright/test": "^1.51.0",
+    "@types/node": "^22.13.10"
+  },
+  "scripts": {
+    "test:e2e": "yarn playwright test --project='UI Tests'",
+    "test:api": "yarn playwright test --project='API Tests'"
+  }
 }
