--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,15 @@
   "packageManager": "yarn@4.7.0",
   "type": "module",
   "dependencies": {
-    "express": "^5.0.1"
+    "@prisma/client": "^6.5.0",
+    "express": "^5.0.1",
+    "pg": "^8.14.0",
+    "prisma": "^6.5.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "@types/pg": "^8.11.11",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
