--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,18 @@
   "packageManager": "yarn@4.7.0",
   "type": "module",
   "dependencies": {
-    "express": "^5.0.1"
+    "@octokit/auth-oauth-app": "^8.1.3",
+    "@octokit/tsconfig": "^4.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.1",
+    "express": "^5.0.1",
+    "googleapis": "^146.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "octokit": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
