--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "@prisma/client": "^6.5.0",
     "express": "^5.0.1",
     "pg": "^8.14.0",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
