--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test:e2e": "yarn playwright test --project='UI Tests'",
-    "test:api": "yarn playwright test --project='API Tests'"
+    "test:api": "yarn playwright test --project='API Tests'",
+    "test:ui:unit": "yarn workspace frontend test"
   }
 }
