--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,32 @@
   "name": "backend",
   "packageManager": "yarn@4.7.0",
   "type": "module",
+  "scripts": {
+    "start": "nodemon",
+    "test": "jest --config jest.config.js"
+  },
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "express": "^5.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/globals": "^29.7.0",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.4.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
