--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "@prisma/client": "^6.5.0",
     "express": "^5.0.1",
     "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "octokit": "^4.1.2",
     "uuid": "^11.1.0"
