build(docker): update Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /src
 # Enable Corepack and install the correct Yarn version
 RUN corepack enable && corepack prepare yarn@4.7.0 --activate
 
+ENV NODE_ENV=development
+
 # Copy dependency files and install using Yarn
 COPY package.json ./
 RUN yarn install
