--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "packageManager": "yarn@4.7.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon",
-    "dev": "ts-node-esm src/server.ts",
+    "start": "node --loader ts-node/esm --no-warnings src/server.ts",
+    "dev": "nodemon",
     "test": "jest --config jest.config.js"
   },
   "dependencies": {
