--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "packageManager": "yarn@4.7.0",
   "devDependencies": {
     "@playwright/test": "^1.51.0",
-    "@types/node": "^22.13.10"
+    "@types/node": "^22.13.10",
+    "husky": "^8.0.0"
   },
   "scripts": {
     "test:e2e": "yarn playwright test --project='UI Tests'",
