--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "octokit": "^4.1.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
