--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "prepare": "cd .. && husky install backend/.husky"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@octokit/auth-oauth-app": "^8.1.3",
     "@prisma/client": "^6.5.0",
     "cookie-parser": "^1.4.7",
