--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -11,6 +11,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "prisma/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "__tests__"]
 }
