--- a/.github/workflows/pre-push.yaml
+++ b/.github/workflows/pre-push.yaml
@@ -16,9 +16,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: yarn
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          yarn set version stable
       - run: yarn install
       # Fail immediately if a hook fails
       - run: cd backend && npx husky run pre-commit || exit 1
