--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.0.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "googleapis": "^148.0.0",
     "js-yaml": "^4.1.0",
