--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^148.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "octokit": "^4.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -42,6 +43,7 @@
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6",
