--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/dom-speech-recognition": "^0.0.6",
     "@types/identity-obj-proxy": "^3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
