--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,9 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
+  "resolutions": {
+  "@radix-ui/react-slot": "1.2.0"
+},
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
