--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "npm:1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
@@ -43,8 +43,8 @@
     "zod": "^3.24.2"
   },
   "resolutions": {
-  "@radix-ui/react-slot": "1.2.0"
-},
+    "@radix-ui/react-slot": "1.2.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
